--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Aug 18 16:18:00 2004  Manish Singh  <yosh@gimp.org>
+
+	* gtk/gtktreeview.c (gtk_tree_view_row_inserted): Initialize height
+	from fixed_height before we do anything, so it always has a valid
+	value.
+
 2004-08-18  Federico Mena Quintero  <federico@ximian.com>
 
 	Fixes #149251:
