--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug 20 11:59:10 2004  Owen Taylor  <otaylor@redhat.com>
+
+	* io-bmp.c: Fix infinite loop that can occur for bad
+	image data (#150601, Chris Evans, Manish Singh)
+
 Sat Aug 14 19:15:08 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
 
 	* === Released 2.4.7 ===
