--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+Sat Aug 21 23:29:54 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtktoolitem.h (GTK_IS_TOOL_ITEM_CLASS): 
+	* gtk/gtktoolbutton.h (GTK_IS_TOOL_BUTTON_CLASS): 
+	* gtk/gtktoggleaction.h (GTK_IS_TOGGLE_ACTION_CLASS): 
+	* gtk/gtkseparatortoolitem.h (GTK_IS_SEPARATOR_TOOL_ITEM_CLASS): 
+	* gtk/gtkradiotoolbutton.h (GTK_IS_RADIO_TOOL_BUTTON_CLASS): 
+	* gtk/gtkradioaction.h (GTK_IS_RADIO_ACTION_CLASS): 
+	* gtk/gtkuimanager.h (GTK_IS_UI_MANAGER_CLASS): 
+	* gtk/gtkaction.h (GTK_IS_ACTION_CLASS): Fix macro definitions.
+	
+Mon Aug 16 01:30:12 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkbutton.c (gtk_button_set_focus_on_click): Fix typo in 
+	the docs.
+
 Wed Aug 18 16:18:00 2004  Manish Singh  <yosh@gimp.org>
 
 	* gtk/gtktreeview.c (gtk_tree_view_row_inserted): Initialize height
