--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Aug 22 13:44:53 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
+
+	* gtk/gtkpaned.c (gtk_paned_class_init): Use PROP_MAX_POSITION,
+	not PROP_MIN_POSITION for the max_position property. Fix pointet
+	out by Tommi Komulainen.
+
 Sun Aug 22 00:08:44 2004  Matthias Clasen  <maclas@gmx.de>
 
 	Fix #150406, reported by Fernando San Martín Woerner, patch
