--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-23  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/x11/gdkwindow-x11.c (gdk_window_focus): Support the latest
+	EWMH additions to the _NET_ACTIVE_WINDOW client message 
+	format.  (#150668, Elijah Newren)
+
 2004-08-22  Philip Langdale  <plangdale@vmware.com>
 
 	* gtk/gtkaction.c (gtk_action_disconnect_proxy): Two signals
