--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-24  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktreeview.c (gtk_tree_view_node_queue_redraw): Take header
+	height and adjustment into account.  (#136496, Pawek Salek)
+
 2004-08-23  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/x11/gdkwindow-x11.c (show_window_internal): Make it compile.
