Use get_file_info() rather than trying get_folder() and checking for an
2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (check_is_folder): Use get_file_info() rather
	than trying get_folder() and checking for an error directly because older
	versions of the gnome-vfs backend don't return an error
	immediately.  (#150852, Zack Cerza )

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Overview of Changes from GTK+ 2.4.7 to GTK+ 2.4.8
 =================================================
 * GtkFileChooser
  - Fix some memory leaks [Federico Mena Quintero]
+ - Make save mode work with old versions of the gnome-vfs 
+   backend. [Zack Cerza]
 * GtkEntryCompletion
  - Warn if text column has wrong type [Fernando San Martin Woerner,
    Gustavo Carneiro]
