--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-25  Matthias Clasen  <mclasen@redhat.com>
 
+	* === Released 2.4.9 ===
+
+2004-08-25  Matthias Clasen  <mclasen@redhat.com>
+
 	* === Released 2.4.8 ===
 
 2004-08-20  Laurent Dhima  <laurenti@alblinux.net>
