Post-release version bump.
	* configure.in: Post-release version bump.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
 2004-08-25  Matthias Clasen  <mclasen@redhat.com>
 
+	* configure.in: Post-release version bump.
+
 	* === Released 2.4.9 ===
 
 2004-08-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.in: Post-release version bump.
 
 	* === Released 2.4.8 ===
 
