On Win32, make graphical tablets work on multi-monitor systems. (#145467,
2004-08-22  Robert Ögren  <gtk@roboros.com>

	On Win32, make graphical tablets work on multi-monitor systems.
	(#145467, reported by buttknock1@ya...)

	* gdk/win32/gdkinput-win32.c (gdk_input_translate_coordinates):
	Use dimensions of _gdk_parent_root as screen size.
	(gdk_input_get_root_relative_geometry): Get coordinates relative
	to GDK root window instead of Win32 coordinates.
	(_gdk_input_other_event): Updated accordingly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-08-22  Robert Ögren  <gtk@roboros.com>
+
+	On Win32, make graphical tablets work on multi-monitor systems.
+	(#145467, reported by buttknock1@ya...)
+
+	* gdk/win32/gdkinput-win32.c (gdk_input_translate_coordinates):
+	Use dimensions of _gdk_parent_root as screen size.
+	(gdk_input_get_root_relative_geometry): Get coordinates relative
+	to GDK root window instead of Win32 coordinates.
+	(_gdk_input_other_event): Updated accordingly.
+
 2004-08-25  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtksizegroup.c (gtk_size_group_add_widget): Fix
