--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-26  Bill Haneman <billh@gnome.org>
+
+	* gtk/gtktreeview:
+	(gtk_tree_view_move_cursor_up_down):
+	If a multi-selection list contains only one item,
+	select it on cursor_up or cursor_down.
+	Fixes bug #131226.
+	[patch from Padraig O'Briain]
+
 2004-08-22  Robert Ögren  <gtk@roboros.com>
 
 	On Win32, make graphical tablets work on multi-monitor systems.
