Updated Ukrainian translation.
2004-08-29  Maxim Dziumanenko <mvd@mylinux.com.ua>

	* Updated Ukrainian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-27  Maxim Dziuamenko <mvd@mylinux.com.ua>
+
+	* Updated Ukrainian translation.
+
 2004-08-25  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.4.9 ===
