--- a/po/uk.po
+++ b/po/uk.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtk+ 1.3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-25 13:27-0400\n"
-"PO-Revision-Date: 2004-04-16 12:18+0200\n"
-"Last-Translator: Yuri Syrota <rasta@cvs.gnome.org>\n"
+"POT-Creation-Date: 2004-08-27 13:39+0300\n"
+"PO-Revision-Date: 2004-08-27 13:40+0300\n"
+"Last-Translator: Maxim Dziumanenko <mvd@mylinux.com.ua>\n"
 "Language-Team: Ukrainian <linux@linux.org.ua>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1013,7 +1013,7 @@ msgstr "Не вдається додати закладку для %s, тому 
 
 #: gtk/gtkfilechooserdefault.c:2572
 msgid "Shortcuts"
-msgstr ""
+msgstr "Ярлики"
 
 #: gtk/gtkfilechooserdefault.c:2626
 msgid "Folder"
@@ -1040,7 +1040,7 @@ msgstr "Файли"
 
 #: gtk/gtkfilechooserdefault.c:2904
 msgid "Name"
-msgstr "Назва кольору:"
+msgstr "Назва"
 
 #: gtk/gtkfilechooserdefault.c:2926
 msgid "Size"
@@ -1361,9 +1361,9 @@ msgid "Filesystem"
 msgstr "Файлова система"
 
 #: gtk/gtkfilesystemunix.c:735
-#, fuzzy, c-format
+#, c-format
 msgid "Could not get a stock icon for %s"
-msgstr "Не вдається отримати інформацію про файл '%s': %s"
+msgstr "Не вдається отримати вбудований значок '%s'"
 
 #: gtk/gtkfilesystemunix.c:830
 #, c-format
@@ -1769,7 +1769,7 @@ msgstr "Вст_авити"
 
 #: gtk/gtkstock.c:334
 msgid "_Preferences"
-msgstr "Н_астройка"
+msgstr "П_араметри"
 
 #: gtk/gtkstock.c:335
 msgid "_Print"
@@ -1845,7 +1845,7 @@ msgstr "П_ідкреслений"
 
 #: gtk/gtkstock.c:354
 msgid "_Undo"
-msgstr "_Скасувати"
+msgstr "В_ернути"
 
 #: gtk/gtkstock.c:355
 msgid "_Yes"
@@ -1989,6 +1989,3 @@ msgstr "Метод XInput"
 #, c-format
 msgid "Could not get information for file '%s': %s"
 msgstr "Не вдається отримати інформацію про файл '%s': %s"
-
-#~ msgid "Unsupported TIFF variant"
-#~ msgstr "Непідтримуваний варіант зображення формату TIFF"
