--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-29  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated Nepali Translation
+
 2004-08-27  Maxim Dziuamenko <mvd@mylinux.com.ua>
 
 	* Updated Ukrainian translation.
