Updated Bengali(bn) Translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2004-08-31  Runa Bhattacharjee	<runab@redhat.com>
+	* bn.po: Updated Bengali (bn) Translation
+
 2004-08-29  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Updated Nepali Translation
