--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug 31 23:24:49 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkcalendar.c (gtk_calendar_main_button): Only start  
+	a drag if the left button is pressed.  (#151490, Frederic Croszat)
+
 2004-08-28  Robert Ögren  <gtk@roboros.com>
 
 	On Win32, do not produce tablet motion or button events while a
