--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2004-09-01  Runa Bhattacharjee	<runab@redhat.com>
+	* bn.po: Updated Bengali (bn) Translation
+
 2004-08-31  Nikos Charonitakis  <charosn@her.forthne.gr>
 
 	* el.po: Updated Greek translation.
