--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Sep  3 22:45:03 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkuimanager.c (print_node): Don't print out attributes
+	for the <ui> root node.  (#151752, Lorenzo Gil Sánchez)
+
 2004-09-03  Tor Lillqvist  <tml@iki.fi>
 
 	* gtk-zip.sh.in: List the three theme gtkrc files separately, zip
