--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-04  Hendrik Richter <hendrik@gnome-de.org>
+
+	* de.po: Updated German translation
+
 2004-09-01  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
