--- a/po/de.po
+++ b/po/de.po
@@ -4,6 +4,7 @@
 # Karsten Weiss <karsten@addx.au.s.shuttle.de>, 1999.
 # Matthias Warkus <mawarkus@gnome.org>, 2001, 2002.
 # Christian Neumair <chris@gnome-de.org>, 2002-2004.
+# Hendrik Richter <hendrik@gnome-de.org>, 2004.
 #
 # IM = Input method => Eingabemethode
 #
@@ -11,9 +12,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GTK+ 2.4.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-25 13:27-0400\n"
+"POT-Creation-Date: 2004-09-04 12:08+0000\n"
 "PO-Revision-Date: 2004-04-25 17:33+0200\n"
-"Last-Translator: Christian Neumair <chris@gnome-de.org>\n"
+"Last-Translator: Hendrik Richter <hendrik@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1027,7 +1028,7 @@ msgstr ""
 
 #: gtk/gtkfilechooserdefault.c:2572
 msgid "Shortcuts"
-msgstr ""
+msgstr "Lesezeichen"
 
 #: gtk/gtkfilechooserdefault.c:2626
 msgid "Folder"
@@ -1378,9 +1379,9 @@ msgid "Filesystem"
 msgstr "Dateisystem"
 
 #: gtk/gtkfilesystemunix.c:735
-#, fuzzy, c-format
+#, c-format
 msgid "Could not get a stock icon for %s"
-msgstr "Es konnten keine Informationen zur Datei »%s« abgerufen werden: %s"
+msgstr "Es konnte kein Standard-Symbol für »%s« geladen werden."
 
 #: gtk/gtkfilesystemunix.c:830
 #, c-format
