--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Sep  4 23:42:09 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* configure.in: Fix the Solaris Xinerama checks.  (#151754) 
+
 Fri Sep  3 22:45:03 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkuimanager.c (print_node): Don't print out attributes
